syntax = "proto3";
package user;

// * Dart -> Rust

// [RINF:DART-SIGNAL]
// true: Login
message LoginAction {
  bool login_action = 1;
}

// [RINF:DART-SIGNAL]
// 1: Logout
// 2: Send
// 3: Fetch mailboxes
// 4: Fetch email metadata
// 5: Fetch email detail
message Action {
  int32 action = 1;
}

// [RINF:DART-SIGNAL]
message UserProto {
  string email_addr = 1;
  string password = 2;
}

// [RINF:DART-SIGNAL]
message NewEmail {
  string from = 1;
  string to = 2;
  string subject = 3;
  string date = 4;
  repeated string attachments = 5;
  string body = 6;
}

// [RINF:DART-SIGNAL]
message MailboxRequest {
  string mailbox = 1;
}

// [RINF:DART-SIGNAL]
message EmailDetailRequest {
  string uid = 1;
  string folder_path = 2;
}

// * Rust -> Dart

// [RINF:RUST-SIGNAL]
message RustResult {
  bool result = 1;
  string info = 2;
}

// [RINF:RUST-SIGNAL]
message MailboxesFetch {
  repeated string mailboxes = 1;
}

// [RINF:RUST-SIGNAL]
message EmailMetadata {
  string uid = 1;
  string from = 2;
  string to = 3;
  string subject = 4;
  string date = 5;
}

// [RINF:RUST-SIGNAL]
message EmailDetail {
  repeated string attachments = 1;
  string body = 2;
}
